--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.0",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^16.11.34",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
     "jotai": "^1.6.6",
+    "lodash": "^4.17.21",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-measure": "^2.5.2",
     "react-scripts": "5.0.1",
+    "sass": "^1.51.0",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
@@ -42,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-measure": "^2.0.8",
     "prettier": "2.6.2"
   }
 }
