--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.11.34",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
+    "color-convert": "^2.0.1",
     "jotai": "^1.6.6",
     "lodash": "^4.17.21",
     "react": "^18.1.0",
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/color-convert": "^2.0.0",
     "@types/react-measure": "^2.0.8",
     "prettier": "2.6.2"
   }
