Add version to manifest.json

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,5 +4,6 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
+  "version": "0.1",
   "background_color": "#ffffff"
 }
