--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,5 +5,9 @@
   "display": "standalone",
   "theme_color": "#000000",
   "version": "0.1",
+  "icons": {
+    "192": "logo192.png",
+    "512": "logo512.png"
+  },
   "background_color": "#ffffff"
 }
