Prevent phone from going to sleep

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "color-convert": "^2.0.1",
     "jotai": "^1.6.6",
     "lodash": "^4.17.21",
+    "nosleep.js": "^0.12.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-measure": "^2.5.2",
